src/test/ui/span/issue-35987.stderr
error[E0404]: expected trait, found type parameter `Add`
  --> $DIR/issue-35987.rs:5:21
   |
LL | impl<T: Clone, Add> Add for Foo<T> {
   |                     ^^^ not a trait
   |
help: consider importing this trait instead
   |
LL | use std::ops::Add;
   |

error: aborting due to previous error

For more information about this error, try `rustc --explain E0404`.
